# flutter-python

app_flutter/: README.md  flutter_native_splash.yaml  pubspec.yaml
app_flutter/android/app/: build.gradle
app_flutter/android/app/src/debug/: AndroidManifest.xml
app_flutter/android/app/src/main/: AndroidManifest.xml
app_flutter/android/app/src/profile/: AndroidManifest.xml
app_flutter/ios/Runner/: Info.plist
app_flutter/ios/Runner.xcodeproj/: project.pbxproj
app_flutter/ios/Runner/Base.lproj/: LaunchScreen.storyboard
app_flutter/lib/: main.dart
app_flutter/lib/app/modules/about/controllers/: about_controller.dart
app_flutter/lib/app/modules/about/views/: about_view.dart
app_flutter/lib/app/modules/home/controllers/: aicoin_controller.dart  coinnews_controller.dart  (+4 more)
app_flutter/lib/app/routes/: app_pages.dart
app_flutter/lib/core/datasource/: coin_schedule_datasource.dart
app_flutter/lib/core/theme/: custom_colors.dart  custom_theme.dart
app_flutter/lib/core/utils/: coin_utils.dart
app_flutter/lib/core/widgets/: common_size.dart
app_flutter/lib/global_widgets/card/: icon_text_card.dart
app_flutter/lib/global_widgets/common/: loading.dart
app_flutter/lib/models/: coin_news.dart  coin_schedule.dart  coin_trend.dart
app_flutter/lib/services/: ai_services.dart  coin_services.dart
app_flutter/web/: index.html
app_flutter/web/splash/: style.css
app_flutter/windows/: CMakeLists.txt
app_flutter/windows/runner/: Runner.rc
backend/: .env  .gitignore  main.py  pyproject.toml
backend/app/: root.py
backend/app/api/: ai.py  coin.py
(+8 files in other folders)
